--- a/2-css-reset-with-normalize/start/css/normalize.css
+++ b/2-css-reset-with-normalize/start/css/normalize.css
@@ -425,3 +425,18 @@ td,
 th {
   padding: 0;
 }
+
+
+/* Lists
+   ========================================================================== */
+
+/**
+ * Remove default list styles, margins and paddings
+ */
+
+ ol, ul {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+
+ }
