--- a/2-css-reset-with-normalize/start/css/style.css
+++ b/2-css-reset-with-normalize/start/css/style.css
@@ -1,42 +1,111 @@
+/* ================================= 
+  Base Styles
+==================================== */
+
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    line-height: 1.6;
-    color: #3a3a3a;
+	font-family: 'Varela Round', sans-serif;
+	line-height: 1.6;
+	color: #3a3a3a;
+}
+
+p {
+	font-size: .95em;
+	margin-bottom: 1.5em;
+}
+
+h2,
+h3,
+a {
+	color: #093a58;
+}
+
+h2,
+h3 {
+	margin-top: 0;
 }
 
 a {
-    color: #fff;
-    text-decoration: none;
+	text-decoration: none;
 }
+
+/* ================================= 
+  Base Layout Styles
+==================================== */
+
+/* ---- Navigation ---- */
 
 .name {
-    margin: 0;
+	font-size: 1.25em;
 }
 
+.name,
+.main-nav li {
+	text-align: center;
+	background: #fff;
+	margin-top: 6px;
+	margin-bottom: 6px;
+}
+
+.main-nav a {
+	font-size: .95em;
+	color: #3acec2;
+	text-transform: uppercase;
+}
+
+.main-nav a:hover {
+	color: #093a58;
+}
+
+.name a, .main-nav a {
+    padding: 10px 15px;
+}
+
+/* ---- Layout Containers ---- */
+
 .container {
-    padding-left: 1em;
-    padding-right: 1em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 .main-header {
-    background: #3acec2;
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
+	background: #3acec2;
+	margin-bottom: 30px;
 }
 
 .main-footer {
-    padding: 2em 0;
-    background: #d9e4ea;
-    text-align: center;
+	text-align: center;
+	padding: 2em 0;
+	background: #d9e4ea;
 }
 
-/* Media Queries */
+/* ================================= 
+  Media Queries
+==================================== */
 
 @media (min-width: 769px) {
-    .container {
-        width: 70%;
-        max-width: 1000px;
-        margin: 0 auto;
+
+	.wrap {
+		min-height: calc(100vh - 89px);
+	}
+
+	.container {
+		width: 80%;
+		max-width: 1150px;
+		margin: 0 auto;
+    }
+    
+    .name, .main-nav, .main-nav li {
+        display: inline;
+    }
+
+    .name {
+        width: 240px;
+        margin-right: 50px;
     }
 }
