--- a/2-css-reset-with-normalize/start/css/style.css
+++ b/2-css-reset-with-normalize/start/css/style.css
@@ -78,7 +78,7 @@ a {
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
 	background: #3acec2;
-	margin-bottom: 30px;
+    margin-bottom: 30px;
 }
 
 .main-footer {
@@ -103,9 +103,32 @@ a {
 		margin: 0 auto;
 	}
 
+    .main-nav {
+        float: right;
+    }
+
+    .main-nav li {
+        float: left;
+        margin-left: 12px;
+    }
+
+    .name {
+        float: left;
+    }
+
 	.feat-img {
-		width: 300px;
+        width: 300px;
+        float: left;
+        margin-top: 5px;
+        margin-right: 25px;
+        margin-bottom: 25px;
+        padding: 10px;
+        border: solid 1px #d9e4ea;
+    }
 
-	}
-
+    .clearfix::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 }
