--- a/2-css-reset-with-normalize/start/css/style.css
+++ b/2-css-reset-with-normalize/start/css/style.css
@@ -57,15 +57,15 @@ a {
 	display: block;
 }
 
-	.main-nav a {
-		font-size: .95em;
-		color: #3acec2;
-		text-transform: uppercase;
-	}
+.main-nav a {
+	font-size: .95em;
+	color: #3acec2;
+	text-transform: uppercase;
+}
 	
-	.main-nav a:hover {
-		color: #093a58;
-	}
+.main-nav a:hover {
+	color: #093a58;
+}
 
 /* ---- Layout Containers ---- */
 
@@ -107,15 +107,18 @@ a {
 		float: right;
 	}
 
+    .col {
+        float: left;
+        padding-left: 1em;
+        padding-right: 1em;
+    }
+
     .secondary {
         width: 40%;
-        float: left;
-        padding-right: 25px;
     }
 
     .primary {
         width: 60%;
-        float: right;
     }
 
 	.name,
