--- a/2-css-reset-with-normalize/start/css/style.css
+++ b/2-css-reset-with-normalize/start/css/style.css
@@ -1,5 +1,9 @@
+/*
+  If you get stuck, feel free to watch the follow-up videos where I'll show you one solution
+*/
+
 /* ================================= 
-  Base Styles
+  Base Element Styles
 ==================================== */
 
 * {
@@ -14,7 +18,7 @@ body {
 
 p {
 	font-size: .95em;
-	margin-bottom: 1.5em;
+	margin-bottom: 1.8em;
 }
 
 h2,
@@ -32,6 +36,10 @@ a {
 	text-decoration: none;
 }
 
+img {
+	max-width: 100%;
+}
+
 /* ================================= 
   Base Layout Styles
 ==================================== */
@@ -40,116 +48,151 @@ a {
 
 .name {
 	font-size: 1.25em;
+	margin: 0;
 }
 
-.name,
-.main-nav li {
-	text-align: center;
-	background: #fff;
-	margin-top: 6px;
-	margin-bottom: 6px;
-}
 
 .name a,
 .main-nav a {
-	padding: 10px 15px;
 	text-align: center;
 	display: block;
+	padding: 10px 15px;
 }
+
+.main-nav {
+	margin-top: 5px;
+}
+
 
 .main-nav a {
 	font-size: .95em;
 	color: #3acec2;
 	text-transform: uppercase;
+	padding: 15px 15px;
 }
-	
+
 .main-nav a:hover {
 	color: #093a58;
 }
 
 /* ---- Layout Containers ---- */
 
-.container {
-	padding-left: 1em;
-	padding-right: 1em;
+.main-header {
+	padding-top: .5em;
+	padding-bottom: .5em;
 }
 
-.main-header {
-	padding-top: 1.5em;
-	padding-bottom: 1.5em;
+.banner, .main-footer {
+	text-align: center;	
+}
+
+.banner {
+	color: #fff;
 	background: #3acec2;
-	margin-bottom: 30px;
+	text-align: center;
+	padding: 3.2em 0;
+	margin-bottom: 60px;
+}
+
+.container {
+	max-width: 80%;
+	width: 1150px;
+	margin: auto;
+	text-align: center;
 }
 
 .main-footer {
-	text-align: center;
-	padding: 2em 0;
 	background: #d9e4ea;
+	padding: 2em 0;
+	margin-top: 30px;
+}
+
+/* ---- Page Elements ---- */
+
+.logo {
+	width: 190px;
+	padding-top: 20px;
+}
+
+.headline {
+	margin-bottom: 0;
+}
+
+.col {
+	text-align: left;
+	display: inline;
+	padding-top: 50px;
+}
+
+.clearfix::after {
+	content: " ";
+	display: table;
+	clear: both;
 }
 
 /* ================================= 
   Media Queries
 ==================================== */
 
-@media (min-width: 789px) {
+@media (min-width: 769px) {
 
-	.wrap {
-		min-height: calc(100vh - 89px);
-	}
 
+	/* ---- Float clearfix ---- */
 	.container {
-		width: 85%;
-		max-width: 1150px;
-		margin: 0 auto;
+		width: 90%;
+		margin: auto;
 	}
 
-	.main-nav {
+	.name {
+		float: left;
+	}
+
+	main-nav {
 		float: right;
 	}
 
-    .col {
-        float: left;
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-
-    .secondary {
-        width: 40%;
-    }
-
-    .primary {
-        width: 60%;
-    }
-
-	.name,
 	.main-nav li {
+		display: inline-block;
+		margin-left: 15px;
+	}
+
+	.tagline {
+		font-size: 1.4em;
+	}
+
+	.col {
+		padding: 20px 20px;
+	}
+	.primary {
+		width: 50%;
 		float: left;
 	}
-
-	.main-nav li {
-		margin-left: 12px;
-	}
-
-	/* ---- Columns ---- */
-
 	
-	
-	/* ------------- */
-
-	.feat-img {
-		width: 300px;
+	.secondary {
+		width: 50%;
 		float: left;
-		margin-top: 5px;
-		margin-right: 25px;
-		margin-bottom: 25px;
-		padding: 10px;
-		border: solid 1px #d9e4ea;
+	}
+	
+	.tertiary {
+		width: 100%;
+		float: right;
 	}
 
-	.clearfix::after {
-		content: "";
-		display: table;
-		clear: both;
-	}
+}
 
+@media (min-width: 1025px) {
+	.primary {
+		width: 40%;
+		float: left;
+	}
+	
+	.secondary {
+		width: 30%;
+		float: left;
+	}
+	
+	.tertiary {
+		width: 30%;
+		float: right;
+	}
 }
