--- a/2-css-reset-with-normalize/start/css/style.css
+++ b/2-css-reset-with-normalize/start/css/style.css
@@ -1,7 +1,3 @@
-/*
-  If you get stuck, feel free to watch the follow-up videos where I'll show you one solution
-*/
-
 /* ================================= 
   Base Element Styles
 ==================================== */
@@ -28,8 +24,13 @@ a {
 }
 
 h2,
-h3 {
+h3,
+h4 {
 	margin-top: 0;
+}
+
+h4 {
+	margin-bottom: .4em;
 }
 
 a {
@@ -38,6 +39,23 @@ a {
 
 img {
 	max-width: 100%;
+}
+
+figure {
+	margin: 0;
+	line-height: 0;
+	position: relative;
+}
+
+figcaption {
+	font-size: .9em;
+	line-height: 1.5;
+	color: #fff;
+	padding: 1em;	
+	background: rgba(19,43,102, .85);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 
 /* ================================= 
@@ -51,29 +69,26 @@ img {
 	margin: 0;
 }
 
-
-.name a,
-.main-nav a {
-	text-align: center;
-	display: block;
-	padding: 10px 15px;
-}
-
 .main-nav {
 	margin-top: 5px;
 }
 
+	.name a,
+	.main-nav a {
+		display: block;
+		text-align: center;
+		padding: 10px 15px;
+	}
+	
+	.main-nav a {
+		font-size: .95em;
+		color: #3acec2;
+		text-transform: uppercase;
+	}
 
-.main-nav a {
-	font-size: .95em;
-	color: #3acec2;
-	text-transform: uppercase;
-	padding: 15px 15px;
-}
-
-.main-nav a:hover {
-	color: #093a58;
-}
+	.main-nav a:hover {
+		color: #093a58;
+	}
 
 /* ---- Layout Containers ---- */
 
@@ -82,23 +97,21 @@ img {
 	padding-bottom: .5em;
 }
 
-.banner, .main-footer {
-	text-align: center;	
+.banner,
+.main-footer {
+	text-align: center;
 }
 
 .banner {
 	color: #fff;
 	background: #3acec2;
-	text-align: center;
 	padding: 3.2em 0;
 	margin-bottom: 60px;
 }
 
-.container {
-	max-width: 80%;
-	width: 1150px;
-	margin: auto;
-	text-align: center;
+.col {
+	padding-right: 1em;
+	padding-left: 1em;
 }
 
 .main-footer {
@@ -111,23 +124,17 @@ img {
 
 .logo {
 	width: 190px;
-	padding-top: 20px;
 }
 
 .headline {
 	margin-bottom: 0;
 }
 
-.col {
-	text-align: left;
-	display: inline;
-	padding-top: 50px;
-}
-
-.clearfix::after {
-	content: " ";
-	display: table;
-	clear: both;
+.icon-location {
+	width: 35px;
+	position: absolute;
+	top: -15px;
+	right: -15px;
 }
 
 /* ================================= 
@@ -136,16 +143,19 @@ img {
 
 @media (min-width: 769px) {
 
-
-	/* ---- Float clearfix ---- */
 	.container {
 		width: 90%;
-		margin: auto;
+		margin: 0 auto;
 	}
 
-	.name, 
-	.col{
+	.name,
+	.col {
 		float: left;
+	}
+
+	.primary,
+	.secondary {
+		width: 50%;
 	}
 
 	.main-nav {
@@ -161,37 +171,30 @@ img {
 		font-size: 1.4em;
 	}
 
-	.col {
-		padding: 20px 20px;
-	}
-	.primary, .secondary {
-		width: 50%;
-		float: left;
-	}
-	
-	.tertiary {
-		float: right;
+	/* ---- Float clearfix ---- */
+
+	.clearfix::after {
+		content: " ";
+		display: table;
+		clear: both;
 	}
 
 }
 
 @media (min-width: 1025px) {
+	
 	.container {
 		width: 80%;
 		max-width: 1150px;
 	}
+
 	.primary {
 		width: 40%;
-		float: left;
 	}
-	
-	.secondary {
-		width: 30%;
-		float: left;
-	}
-	
+
+	.secondary,
 	.tertiary {
 		width: 30%;
-		float: right;
 	}
+
 }
