--- a/1-understanding-flexbox/3-creating-a-flex-container/start/css/flexbox.css
+++ b/1-understanding-flexbox/3-creating-a-flex-container/start/css/flexbox.css
@@ -2,4 +2,14 @@
   Flexbox
 ==================================== */
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.item-1 {
+  margin-right: auto;
+}
+
 
