--- a/1-understanding-flexbox/3-creating-a-flex-container/start/css/flexbox.css
+++ b/1-understanding-flexbox/3-creating-a-flex-container/start/css/flexbox.css
@@ -1,8 +1,13 @@
+
 /* ================================= 
   Flexbox
 ==================================== */
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+  min-height: 50vh;
+}
+
+.item {
+  margin: auto;
 }
