--- a/2-css-reset-with-normalize/start/css/base.css
+++ b/2-css-reset-with-normalize/start/css/base.css
@@ -1,7 +1,3 @@
-/*
-  If you get stuck, feel free to watch the follow-up videos where I'll show you one solution
-*/
-
 /* ================================= 
   Base Element Styles
 ==================================== */
@@ -9,33 +5,33 @@
 * {
 	box-sizing: border-box;
 }
-
 body {
 	font-family: 'Varela Round', sans-serif;
 	line-height: 1.6;
 	color: #3a3a3a;
+	margin: 0;
 }
-
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 p {
 	font-size: .95em;
 	margin-bottom: 1.8em;
 }
-
 h2,
 h3,
 a {
 	color: #093a58;
 }
-
 h2,
 h3 {
 	margin-top: 0;
 }
-
 a {
 	text-decoration: none;
 }
-
 img {
 	max-width: 100%;
 }
@@ -47,30 +43,23 @@ img {
 /* ---- Navigation ---- */
 
 .name {
-	font-size: 1.25em;
+	font-size: 1.35em;
 	margin: 0;
 }
-
-
+.main-nav {
+	margin-top: 5px;
+}
 .name a,
 .main-nav a {
 	text-align: center;
 	display: block;
 	padding: 10px 15px;
 }
-
-.main-nav {
-	margin-top: 5px;
-}
-
-
 .main-nav a {
 	font-size: .95em;
 	color: #3acec2;
 	text-transform: uppercase;
-	padding: 15px 15px;
 }
-
 .main-nav a:hover {
 	color: #093a58;
 }
@@ -81,26 +70,20 @@ img {
 	padding-top: .5em;
 	padding-bottom: .5em;
 }
-
-.banner, .main-footer {
-	text-align: center;	
+.banner,
+.main-footer {
+	text-align: center;
 }
-
 .banner {
 	color: #fff;
 	background: #3acec2;
-	text-align: center;
 	padding: 3.2em 0;
-	margin-bottom: 60px;
+	margin-bottom: 48px;
 }
-
-.container {
-	max-width: 80%;
-	width: 1150px;
-	margin: auto;
-	text-align: center;
+.col {
+	padding-right: 1em;
+	padding-left: 1em;
 }
-
 .main-footer {
 	background: #d9e4ea;
 	padding: 2em 0;
@@ -111,23 +94,12 @@ img {
 
 .logo {
 	width: 190px;
-	padding-top: 20px;
 }
-
 .headline {
 	margin-bottom: 0;
 }
-
-.col {
-	text-align: left;
-	display: inline;
-	padding-top: 50px;
-}
-
-.clearfix::after {
-	content: " ";
-	display: table;
-	clear: both;
+.feat-img {
+	border-radius: 5px;
 }
 
 /* ================================= 
@@ -135,63 +107,19 @@ img {
 ==================================== */
 
 @media (min-width: 769px) {
-
-
-	/* ---- Float clearfix ---- */
-	.container {
+	.main-header,
+	.row {
 		width: 90%;
-		margin: auto;
+		margin: 0 auto;
 	}
-
-	.name, 
-	.col{
-		float: left;
-	}
-
-	.main-nav {
-		float: right;
-	}
-
-	.main-nav li {
-		display: inline-block;
-		margin-left: 15px;
-	}
-
 	.tagline {
 		font-size: 1.4em;
 	}
-
-	.col {
-		padding: 20px 20px;
-	}
-	.primary, .secondary {
-		width: 50%;
-		float: left;
-	}
-	
-	.tertiary {
-		float: right;
-	}
-
 }
-
 @media (min-width: 1025px) {
-	.container {
+	.main-header,
+	.row {
 		width: 80%;
 		max-width: 1150px;
-	}
-	.primary {
-		width: 40%;
-		float: left;
-	}
-	
-	.secondary {
-		width: 30%;
-		float: left;
-	}
-	
-	.tertiary {
-		width: 30%;
-		float: right;
 	}
 }
