--- a/2-css-reset-with-normalize/start/css/flexbox.css
+++ b/2-css-reset-with-normalize/start/css/flexbox.css
@@ -3,9 +3,11 @@
 ==================================== */
 
 @media (min-width: 769px) {
-	.main-header, 
+
+	.main-header,
 	.main-nav,
-	.row {
+	.row,
+	.col {
 		display: flex;
 	}
 
@@ -15,33 +17,21 @@
 	}
 
 	.col {
-		flex: 1 50%;
+		flex-direction: column;
+		flex: 1;
 	}
 
-	.row {
-		flex-wrap: wrap;
+	.button {
+		margin-top: auto;
+		align-self: flex-end;
 	}
-
-	.secondary {
-		order: -1;
-	}
-
 }
 
 @media (min-width: 1025px) {
-	
+
 	.main-header {
 		flex-direction: row;
 		justify-content: space-between;
 	}
-
-	.col {
-		flex-basis: 0;
-	}
-
-	.primary {
-		flex-grow: 1.4;
-	}
-
 
 }
