--- a/2-css-reset-with-normalize/start/css/flexbox.css
+++ b/2-css-reset-with-normalize/start/css/flexbox.css
@@ -1,30 +1,31 @@
 /* ================================= 
+  Base Styles
+==================================== */
+body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.row {
+	flex: 1;
+}
+
+/* ================================= 
   Media Queries
 ==================================== */
 
 @media (min-width: 769px) {
 
 	.main-header,
-	.main-nav,
-	.row,
-	.col {
+	.main-nav {
 		display: flex;
 	}
-
 	.main-header {
 		flex-direction: column;
 		align-items: center;
 	}
 
-	.col {
-		flex-direction: column;
-		flex: 1;
-	}
-
-	.button {
-		margin-top: auto;
-		align-self: flex-end;
-	}
 }
 
 @media (min-width: 1025px) {
